@@ -104,7 +104,6 @@ function wp_movie_ratings_head_inclusion() {
 }
 
 
-
 # Change [[wp_movie_ratings_page]] into movie ratings list
 function parse_wp_movie_ratings_tags($content = "") {
 	return str_replace("[[wp_movie_ratings_page]]", get_wp_movie_ratings(null, array("page_mode" => "yes")), $content);
@@ -148,8 +147,9 @@ function get_wp_movie_ratings($count = null, $options = array()) {
 	$o .= "<!-- Recently watched movies list by WP Movie Ratings wordpress plugin: http://paulgoscicki.com/projects/wp-movie-ratings/ -->\n";
 
 	# html container
-	$o .= "<div id=\"wp_movie_ratings\">\n";
-	$o .= "<h2>" . stripslashes(get_option("wp_movie_ratings_dialog_title")) . "</h2>\n";
+	$o .= "<div id=\"wp_movie_ratings\"" . ($page_mode == "yes" ? " class=\"page_mode\"" : "") . ">\n";
+	if ($page_mode != "yes") $o .= "<h2>" . stripslashes(get_option("wp_movie_ratings_dialog_title")) . "</h2>\n";
+
 	$o .= "<ul" . ($text_ratings == "yes" ? " class=\"text_ratings\"" : "") . ">\n";
 
 	$i = 0; # row alternator
@@ -162,6 +162,10 @@ function get_wp_movie_ratings($count = null, $options = array()) {
 	if (count($movies) == 0) $o .= "<li>No movies rated yet! Go and rate some. Now.</li>\n";
 
 	$o .= "</ul>\n";
+
+	# Please don't remove it. Thank you :)
+	if ($page_mode == "yes") $o .= "<p id=\"link_love\">List generated by <a href=\"http://paulgoscicki.com/projects/wp-movie-ratings/\">WP Movie Ratings</a>.</p>\n";
+	
 	$o .= "</div>\n";
 
 	return $o;
